--- a/src/js/widgets/checkboxSelection.html
+++ b/src/js/widgets/checkboxSelection.html
@@ -1,4 +1,4 @@
-<div class='ag-list-selection' style="height: 100%; overflow: auto;">
+<div class='ag-list-selection' style="height: 40%; overflow: auto; border: 1px solid darkgrey;">
     <div>
         <div ag-repeat draggable="true">
             <span class="fa ag-checkbox-selection-checkbox"></span>
